--- a/nml-ui-bst-angular/src/app/pages/joueur/joueur.component.scss
+++ b/nml-ui-bst-angular/src/app/pages/joueur/joueur.component.scss
@@ -117,6 +117,13 @@
 }
 
 // Equipment & territories grids
+.equipment-container {
+  max-height: 500px;
+  overflow-y: auto;
+  padding-right: 4px;
+  @include shared.custom-scrollbar;
+}
+
 .equipment-grid, .territories-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
