--- a/nml-ui-bst-angular/src/app/pages/carte/carte.component.scss
+++ b/nml-ui-bst-angular/src/app/pages/carte/carte.component.scss
@@ -428,6 +428,22 @@
   background: #1e293b;
 }
 
+.svg-loading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 400px;
+  gap: 16px;
+  color: #64748b;
+  background: #1e293b;
+  border-radius: 12px;
+
+  p {
+    margin: 0;
+  }
+}
+
 .map-background {
   display: block;
   width: 100%;
